--- a/app/globals.css
+++ b/app/globals.css
@@ -90,4 +90,9 @@ body,
 	}
 }
 
+/* Edit the content of quill text editor */
+.ql-container {
+	font-size: 16px !important;
+}
+
 @import '~@uploadthing/react/styles.css';
